--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,9 @@
   font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace !important;
   font-size: 0.9em;
 }
+
+.navbar-sticky {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+} 
