--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
             <%= link_to 'Rimborsi', reimboursements_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Conti Bancari', bank_accounts_path, class: 'nav-link' %>
+            <%= link_to 'Conti bancari', bank_accounts_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Veicoli', vehicles_path, class: 'nav-link' %>
