--- a/app/views/bank_accounts/index.html.erb
+++ b/app/views/bank_accounts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h1><i class="fas fa-university me-2"></i>Conti Bancari</h1>
+    <h1><i class="fas fa-university me-2"></i>Conti bancari</h1>
     <%= link_to new_bank_account_path, class: "btn btn-primary" do %>
       <i class="fas fa-plus me-2"></i>Nuovo conto bancario
     <% end %>
