--- a/app/views/bank_accounts/_form.html.erb
+++ b/app/views/bank_accounts/_form.html.erb
@@ -75,7 +75,7 @@
 
   <div class="col-md-6">
     <%= form.label :fiscal_code, "Codice Fiscale", class: "form-label" %>
-    <%= form.text_field :fiscal_code, class: "form-control", pattern: "[A-Z]{6}[0-9]{2}[A-Z][0-9]{2}[A-Z][0-9]{3}[A-Z]", title: "Codice fiscale italiano" %>
+    <%= form.text_field :fiscal_code, class: "form-control", title: "Codice fiscale" %>
   </div>
 
   <div class="col-12">
