--- a/app/views/devise/registrations/_user_fields.html.erb
+++ b/app/views/devise/registrations/_user_fields.html.erb
@@ -1,16 +1,16 @@
 <div class="col-md-6">
   <%= f.label :name, "Nome", class: "form-label" %>
-  <%= f.text_field :name, class: "form-control", required: true, minlength: 2, maxlength: 50 %>
+  <%= f.text_field :name, class: "form-control", required: true, minlength: 2, maxlength: 50, autocomplete: :given-name %>
 </div>
 
 <div class="col-md-6">
   <%= f.label :surname, "Cognome", class: "form-label" %>
-  <%= f.text_field :surname, class: "form-control", required: true, minlength: 2, maxlength: 50 %>
+  <%= f.text_field :surname, class: "form-control", required: true, minlength: 2, maxlength: 50, autocomplete: :family-name %>
 </div>
 
 <div class="col-md-6">
   <%= f.label :email, "Email", class: "form-label" %>
-  <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", required: true %>
+  <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", required: true, autocomplete: :email %>
   <small class="form-text text-muted">Inserisci un indirizzo email valido</small>
 </div>
 
@@ -18,15 +18,14 @@
   <%= f.label :telephone, "Telefono", class: "form-label" %>
   <%= f.text_field :telephone, class: "form-control", type: "tel",
                   pattern: "[0-9]{6,13}",
-                  title: "Numero di telefono italiano senza spazi e senza prefisso (es: 3331234567)" %>
-  <small class="form-text text-muted">Numero italiano senza spazi e senza prefisso +39: 3331234567</small>
+                  title: "Numero di telefono italiano senza spazi e senza prefisso (es: 3331234567)", autocomplete: "tel-national"%>
+  <small class="form-text text-muted">Numero di cellulare senza spazi e senza prefisso: 3331234567</small>
 </div>
 
 <div class="col-md-6">
   <%= f.label :fiscal_code, "Codice Fiscale", class: "form-label" %>
   <%= f.text_field :fiscal_code, class: "form-control", required: true, maxlength: 16,
-                  pattern: "[A-Za-z]{6}[0-9]{2}[A-Za-z][0-9]{2}[A-Za-z][0-9]{3}[A-Za-z]",
-                  title: "Codice fiscale italiano di 16 caratteri (es: RSSMRA80A01H501U)",
+                  title: "Codice fiscale",
                   style: "text-transform: uppercase;" %>
-  <small class="form-text text-muted">Codice fiscale italiano di 16 caratteri (obbligatorio)</small>
+  <small class="form-text text-muted">Codice fiscale</small>
 </div>
