--- a/app/views/reimboursements/_expense_fields.html.erb
+++ b/app/views/reimboursements/_expense_fields.html.erb
@@ -18,7 +18,7 @@
             min: 0, 
             readonly: f.object.car?, 
             class: "form-control #{'calculated-amount' if f.object.car?}", 
-            placeholder: f.object.car? ? "Auto-calcolato" : "Inserisci importo",
+            placeholder: f.object.car? ? "Autocalcolato" : "Inserisci importo",
             style: f.object.car? ? "background-color: #f8f9fa;" : "" %>
       </div>
     </div>
