--- a/app/views/reimboursements/_form.html.erb
+++ b/app/views/reimboursements/_form.html.erb
@@ -110,7 +110,7 @@
     <div class="card-header d-flex justify-content-between align-items-center">
       <h5 class="mb-0">Spese</h5>
       <button type="button" class="btn btn-primary btn-sm" id="add-expense">
-        <i class="fas fa-plus"></i> Aggiungi Spesa
+        <i class="fas fa-plus"></i> Aggiungi spesa
       </button>
     </div>
     <div class="card-body">
