--- a/app/views/reimboursement_mailer/status_changed.text.erb
+++ b/app/views/reimboursement_mailer/status_changed.text.erb
@@ -24,5 +24,5 @@ Per chiarimenti contatta: <%= admin_email %>
 Puoi anche rispondere con eventuali note direttamente sulla piattaforma.
 
 Link utili:
-- Visualizza questo rimborso: <%= Rails.application.routes.url_helpers.reimboursement_url(@reimboursement, host: request.base_url rescue 'localhost:3000') %>
-- Tutti i rimborsi: <%= Rails.application.routes.url_helpers.reimboursements_url(host: request.base_url rescue 'localhost:3000') %>
+- Visualizza questo rimborso: <%= reimboursement_url(@reimboursement) %>
+- Tutti i rimborsi: <%= reimboursements_url %>
