Fix testi mailer, rimuovo sidekiq-web

--- a/app/views/reimboursement_mailer/note_added.html.erb
+++ b/app/views/reimboursement_mailer/note_added.html.erb
@@ -80,11 +80,11 @@
     </div>
     
     <div class="footer">
-      <p><strong>Gestione Rimborsi</strong></p>
+      <p><strong>Wikimedia Italia - Gestione rimborsi</strong></p>
       <% admin_email = ENV['EMAIL_AMMINISTRAZIONE'] || ENV["ADDRESS"] %>
       <p>
         Per chiarimenti contatta: <a href="mailto:<%= admin_email %>" style="color: white;"><%= admin_email %></a><br>
-        Puoi anche rispondere con eventuali note direttamente sulla piattaforma.
+        Ti preghiamo di rispondere a richieste di chiarimenti e integrazioni con una nota direttamente sulla piattaforma.
       </p>
       <p style="margin-top: 15px;">
         <a href="<%= reimboursement_url(@reimboursement) %>" style="color: white; text-decoration: underline;">
