--- a/app/views/reimboursement_mailer/status_changed.text.erb
+++ b/app/views/reimboursement_mailer/status_changed.text.erb
@@ -17,11 +17,11 @@ Data: <%= @note.created_at.strftime("%d/%m/%Y alle %H:%M") %>
 
 TOTALE RIMBORSO: € <%= number_with_precision(@reimboursement.total_amount, precision: 2) %>
 
-GESTIONE RIMBORSI
+WIKIMEDIA ITALIA - GESTIONE RIMBORSI
 =================
 <% admin_email = ENV['EMAIL_AMMINISTRAZIONE'] || ENV["ADDRESS"] %>
 Per chiarimenti contatta: <%= admin_email %>
-Puoi anche rispondere con eventuali note direttamente sulla piattaforma.
+Ti preghiamo di rispondere a richieste di chiarimenti e integrazioni con una nota direttamente sulla piattaforma.
 
 Link utili:
 - Visualizza questo rimborso: <%= reimboursement_url(@reimboursement) %>
