--- a/app/views/reimboursements/_expense_fields.html.erb
+++ b/app/views/reimboursements/_expense_fields.html.erb
@@ -43,7 +43,7 @@
     </div>
     
     <div class="col-md-2">
-      <%= f.label :date, "Data", class: "form-label" %>
+      <%= f.label :date, "Data giustificativo", class: "form-label" %>
       <%= f.date_field :date, class: "form-control", value: Date.current %>
     </div>
 
