--- a/app/views/reimboursements/show.html.erb
+++ b/app/views/reimboursements/show.html.erb
@@ -289,6 +289,10 @@
                             <% end %>
                           </td>
                           <td>
+                            <div class="small">
+                                <strong>Fondo:</strong><%= link_to expense.fund, expense.fund.name %><br/>
+                                <strong>Progetto:</strong> <%= expense.project %><br/>
+                            </div>
                             <% if expense.car? %>
                               <!-- Dettagli spesa auto -->
                               <div class="small">
@@ -311,7 +315,6 @@
                             <% else %>
                               <!-- Dettagli spesa normale -->
                               <div class="small">
-                                <strong>Progetto:</strong> <%= expense.project %><br>
                                 <!-- Allegato spesa normale -->
                                 <% if expense.electronic_invoice? && expense.has_invoice_pdf? %>
                                   <!-- Fattura elettronica con PDF generato -->
