--- a/app/views/reimboursements/show.html.erb
+++ b/app/views/reimboursements/show.html.erb
@@ -290,7 +290,7 @@
                           </td>
                           <td>
                             <div class="small">
-                                <strong>Fondo:</strong><%= link_to expense.fund, expense.fund.name %><br/>
+                                <strong>Fondo:</strong> <%= expense.fund.name %><br/>
                                 <strong>Progetto:</strong> <%= expense.project %><br/>
                             </div>
                             <% if expense.car? %>
