--- a/app/views/devise/registrations/_user_fields.html.erb
+++ b/app/views/devise/registrations/_user_fields.html.erb
@@ -1,11 +1,11 @@
 <div class="col-md-6">
   <%= f.label :name, "Nome", class: "form-label" %>
-  <%= f.text_field :name, class: "form-control", required: true, minlength: 2, maxlength: 50, autocomplete: :given-name %>
+  <%= f.text_field :name, class: "form-control", required: true, minlength: 2, maxlength: 50, autocomplete: "given-name" %>
 </div>
 
 <div class="col-md-6">
   <%= f.label :surname, "Cognome", class: "form-label" %>
-  <%= f.text_field :surname, class: "form-control", required: true, minlength: 2, maxlength: 50, autocomplete: :family-name %>
+  <%= f.text_field :surname, class: "form-control", required: true, minlength: 2, maxlength: 50, autocomplete: "family-name" %>
 </div>
 
 <div class="col-md-6">
